k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: climatology
spec:
  selector:
    app: climatology
  ports:
    - name: http
      port: 8080
      targetPort: 8080
